--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -9,7 +9,7 @@
                 <a href="profile.hbs">Профиль</a>
             </li>
             <li>
-                <a href="main.hbs">Чат</a>
+                <a href="chat.hbs">Чат</a>
             </li>
             <li>
                 <a href="sign.hbs">Регистрация</a>
