--- a/src/pages/profile.hbs
+++ b/src/pages/profile.hbs
@@ -51,7 +51,7 @@
         <input type="password" readonly="true" minlength="2" maxlength="30" class="profile__input" value="88128880000" name="newPassword">
       </div>
     </div>
-    {{> button name="Сохранить" class="profile_pass"}}
+    {{> button name="Сохранить" class="profile_pass profile__btn_edit"}}
     <div class="profile-info">
       <div class="profile-info__item">
         <button class="profile-info__button">Изменить информацию</button>
