--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,3 +5,4 @@
 @import url('./blocks/profile.scss');
 @import url('./blocks/back.scss');
 @import url('./blocks/404.scss');
+@import url('./blocks/chat.scss');
