--- a/src/styles/blocks/profile.scss
+++ b/src/styles/blocks/profile.scss
@@ -99,6 +99,12 @@
   &_pass {
     display: none;
   }
+  &__btn_edit {
+    margin-top: 30px;
+    max-width: 280px;
+    text-align: center;
+    justify-content: center;
+  }
   &_hidden {
     display: none;
   }
