--- a/src/layouts/desktop.hbs
+++ b/src/layouts/desktop.hbs
@@ -9,9 +9,11 @@
   <title>Messenger</title>
 </head>
 <body>
-  <div class="container">
-    {{{body}}}
-  </div>
+  <main>
+    <div class="container">
+        {{{body}}}
+    </div>
+  </main>
 </body>
   <script src="../js/index.js" type="module"></script>
 </html>
