--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,22 +1,24 @@
 
 {{!< desktop}}
-    <main>
-          <ul>
-            <li>
-                <a href="login.hbs">Логин</a>
-            </li>
-            <li>
-                <a href="profile.hbs">Профиль</a>
-            </li>
-            <li>
-                <a href="chat.hbs">Чат</a>
-            </li>
-            <li>
-                <a href="sign.hbs">Регистрация</a>
-            </li>
-            <li>
-                <a href="404.hbs">404</a>
-            </li>
-          </ul>
-        </div>
-    </main>
+<nav>
+  <ul>
+    <li>
+      <a href="login.hbs">Логин</a>
+    </li>
+    <li>
+      <a href="profile.hbs">Профиль</a>
+    </li>
+    <li>
+      <a href="chat.hbs">Чат</a>
+    </li>
+    <li>
+      <a href="sign.hbs">Регистрация</a>
+    </li>
+    <li>
+      <a href="404.hbs">404</a>
+    </li>
+        <li>
+      <a href="500.hbs">500</a>
+    </li>
+  </ul>
+</nav>
