--- a/src/pages/login.hbs
+++ b/src/pages/login.hbs
@@ -3,7 +3,7 @@ button: "Войти"
 ---
 
 {{!< desktop}}
-
+    {{> back}}
 <div class="login">
   <div class="login__container">
     <h2 class="login__title">Вход</h2>
