--- a/src/pages/sign.hbs
+++ b/src/pages/sign.hbs
@@ -1,6 +1,7 @@
 {{!< desktop}}
 
 <div class="login">
+    {{> back}}
   <div class="login__container">
     <h2 class="login__title">Регистрации</h2>
     <form class="login__form">
